--- a/ObservableProcess/ObservableProcess.csproj
+++ b/ObservableProcess/ObservableProcess.csproj
@@ -8,6 +8,8 @@
     <PackageReference Include="System.Reactive.Linq" Version="3.1.1" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="ConfirmedStartProcessBase" />
+    <Reference Include="System.Threading.Thread, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <HintPath>..\..\..\Users\Mpdreamz\.nuget\packages\system.threading.thread\4.3.0\ref\netstandard1.3\System.Threading.Thread.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
