--- a/src/ScratchPad/ScratchPad.csproj
+++ b/src/ScratchPad/ScratchPad.csproj
@@ -6,4 +6,5 @@
   <ItemGroup>
     <ProjectReference Include="..\ObservableProcess\ObservableProcess.csproj" />
   </ItemGroup>
+  <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
