--- a/src/ObservableProcess/ObservableProcess.csproj
+++ b/src/ObservableProcess/ObservableProcess.csproj
@@ -1,5 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="..\..\build\Versioning.targets" />
   <PropertyGroup>
+    <AssemblyName>ObservableProcess</AssemblyName>
     <TargetFramework>netstandard1.4</TargetFramework>
     <RootNamespace>Elastic.ProcessManagement</RootNamespace>
     <Version>$(ObservableProcessCurrentVersion)</Version>
@@ -7,6 +9,6 @@
     <AssemblyVersion>$(ObservableProcessCurrentAssemblyVersion)</AssemblyVersion>
     <FileVersion>$(ObservableProcessCurrentAssemblyFileVersion)</FileVersion>
   </PropertyGroup>
+  <Import Project="..\..\build\outputpath.props" />
   <Import Project="..\..\.paket\Paket.Restore.targets" />
-  <Import Project="..\..\build\Versioning.targets" />
 </Project>
