--- a/src/ScratchPad/ScratchPad.csproj
+++ b/src/ScratchPad/ScratchPad.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\ObservableProcess\ObservableProcess.csproj" />
+    <ProjectReference Include="..\ElasticsearchNode\ElasticsearchNode.csproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
