use Paket only for FAKE dependencies, sadly need PackageReference for Rider to pick up tests and being able to restore OOTB for now

--- a/src/ElasticsearchNode/ElasticsearchNode.csproj
+++ b/src/ElasticsearchNode/ElasticsearchNode.csproj
@@ -11,6 +11,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\ObservableProcess\ObservableProcess.csproj" />
+    <PackageReference Include="System.Reactive.Linq" Version="3.1.1" />
   </ItemGroup>
-  <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
