--- a/src/ElasticsearchNode.Runner/ElasticsearchNode.Runner.csproj
+++ b/src/ElasticsearchNode.Runner/ElasticsearchNode.Runner.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ElasticsearchNode\ElasticsearchNode.csproj" />
     <ProjectReference Include="..\ObservableProcess\ObservableProcess.csproj" />
+    <PackageReference Include="NEST" Version="5.5.0" />
+    <PackageReference Include="SemanticVersioning" Version="0.8.0" />
   </ItemGroup>
-  <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
