--- a/src/ObservableProcess/ObservableProcess.csproj
+++ b/src/ObservableProcess/ObservableProcess.csproj
@@ -9,5 +9,10 @@
     <AssemblyVersion>$(ObservableProcessCurrentAssemblyVersion)</AssemblyVersion>
     <FileVersion>$(ObservableProcessCurrentAssemblyFileVersion)</FileVersion>
   </PropertyGroup>
-  <Import Project="..\..\.paket\Paket.Restore.targets" />
+  <ItemGroup>
+    <PackageReference Include="System.Diagnostics.Process" Version="4.3.0" />
+    <PackageReference Include="System.Threading.Thread" Version="4.3.0" />
+    
+    <PackageReference Include="System.Reactive.Linq" Version="3.1.1" />
+  </ItemGroup>
 </Project>
