--- a/src/ElasticsearchNode.Runner/ElasticsearchNode.Runner.csproj
+++ b/src/ElasticsearchNode.Runner/ElasticsearchNode.Runner.csproj
@@ -1,4 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\build\Versioning.targets" />
   <PropertyGroup>
     <TargetFramework>netstandard1.3</TargetFramework>
