--- a/src/ObservableProcess/ObservableProcess.csproj
+++ b/src/ObservableProcess/ObservableProcess.csproj
@@ -1,4 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\build\Versioning.targets" />
   <PropertyGroup>
     <AssemblyName>ObservableProcess</AssemblyName>
@@ -12,7 +13,6 @@
   <ItemGroup>
     <PackageReference Include="System.Diagnostics.Process" Version="4.3.0" />
     <PackageReference Include="System.Threading.Thread" Version="4.3.0" />
-    
     <PackageReference Include="System.Reactive.Linq" Version="3.1.1" />
   </ItemGroup>
 </Project>
