Feature/shade deps (#4)
* use Paket only for FAKE dependencies, sadly need PackageReference for Rider to pick up tests and being able to restore OOTB for now

* update paket lock to reflect only build changes, use empty .dependencies file in src to prevent PAKET to manage these

* several changes, most importantly the observables now run in a threadpool thread, since process.WaitForCompletion is blocking if you start multiple observableprocesses from the same thread they bleed wait time for others

* Support a NoWrapInThread parameter

* added Proc static class for the quick one offs

* fixed off by one when receiving multiple writes on a single line that get received with null byte, fixed not flushing on receive we were only flushing newlines but not the remainding bytes

* started on standardin tests, still need to come up with a nice API for it

--- a/src/ElasticsearchNode.Runner/ElasticsearchNode.Runner.csproj
+++ b/src/ElasticsearchNode.Runner/ElasticsearchNode.Runner.csproj
@@ -1,4 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\build\Versioning.targets" />
   <PropertyGroup>
     <TargetFramework>netstandard1.3</TargetFramework>
@@ -11,6 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ElasticsearchNode\ElasticsearchNode.csproj" />
     <ProjectReference Include="..\ObservableProcess\ObservableProcess.csproj" />
+    <PackageReference Include="NEST" Version="5.5.0" />
+    <PackageReference Include="SemanticVersioning" Version="0.8.0" />
   </ItemGroup>
-  <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
