--- a/src/ElasticsearchNode.Runner/ElasticsearchNode.Runner.csproj
+++ b/src/ElasticsearchNode.Runner/ElasticsearchNode.Runner.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\ElasticsearchNode\ElasticsearchNode.csproj" />
-    <ProjectReference Include="..\ObservableProcess\ObservableProcess.csproj" />
+    <ProjectReference Include="..\..\..\..\proc\src\Proc\Proc.csproj" />
     <PackageReference Include="NEST" Version="5.5.0" />
     <PackageReference Include="SemanticVersioning" Version="0.8.0" />
   </ItemGroup>
