--- a/src/ScratchPad/ScratchPad.csproj
+++ b/src/ScratchPad/ScratchPad.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\ElasticsearchNode.Runner\ElasticsearchNode.Runner.csproj" />
-    <ProjectReference Include="..\ObservableProcess\ObservableProcess.csproj" />
+    <ProjectReference Include="..\..\..\..\proc\src\Proc\Proc.csproj" />
     <ProjectReference Include="..\ElasticsearchNode\ElasticsearchNode.csproj" />
   </ItemGroup>
 </Project>
