--- a/src/ScratchPad/ScratchPad.csproj
+++ b/src/ScratchPad/ScratchPad.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\ElasticsearchNode.Runner\ElasticsearchNode.Runner.csproj" />
-    <ProjectReference Include="..\ObservableProcess\ObservableProcess.csproj" />
     <ProjectReference Include="..\ElasticsearchNode\ElasticsearchNode.csproj" />
+    <!--<ProjectReference Include="..\..\..\..\proc\src\Proc\Proc.csproj" />-->
+    <PackageReference Include="Proc" Version="0.1.3" />
   </ItemGroup>
 </Project>
