--- a/src/ElasticsearchNode/ElasticsearchNode.csproj
+++ b/src/ElasticsearchNode/ElasticsearchNode.csproj
@@ -9,6 +9,7 @@
     <InformationalVersion>$(ElasticsearchNodeCurrentVersion)</InformationalVersion>
     <AssemblyVersion>$(ElasticsearchNodeCurrentAssemblyVersion)</AssemblyVersion>
     <FileVersion>$(ElasticsearchNodeCurrentAssemblyFileVersion)</FileVersion>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <!--<ProjectReference Include="..\..\..\..\proc\src\Proc\Proc.csproj" />-->
