--- a/src/ScratchPad/ScratchPad.csproj
+++ b/src/ScratchPad/ScratchPad.csproj
@@ -4,8 +4,7 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ElasticsearchNode.Runner\ElasticsearchNode.Runner.csproj" />
-    <ProjectReference Include="..\ElasticsearchNode\ElasticsearchNode.csproj" />
+    <ProjectReference Include="..\Elastic.Managed.Ephemeral\Elastic.Managed.Ephemeral.csproj" />
     <!--<ProjectReference Include="..\..\..\..\proc\src\Proc\Proc.csproj" />-->
     <PackageReference Include="Proc" Version="0.1.3" />
   </ItemGroup>
