--- a/src/Elastic.Xunit/Elastic.Xunit.csproj
+++ b/src/Elastic.Xunit/Elastic.Xunit.csproj
@@ -8,4 +8,7 @@
     <!--<PackageReference Include="Proc" Version="0.1.3" />-->
     <PackageReference Include="xunit" Version="2.3.1" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Configuration" />
+  </ItemGroup>
 </Project>
