--- a/src/Elastic.Xunit.Example/Elastic.Xunit.Example.csproj
+++ b/src/Elastic.Xunit.Example/Elastic.Xunit.Example.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <IsPackable>False</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-beta1-build3642"/>
