--- a/src/Elastic.Xunit/Elastic.Xunit.csproj
+++ b/src/Elastic.Xunit/Elastic.Xunit.csproj
@@ -1,14 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="..\..\build\Common.targets" />
   <PropertyGroup>
     <TargetFramework>netstandard1.3</TargetFramework>
     <RootNamespace>Elastic.Xunit</RootNamespace>
+    <IsPackable>True</IsPackable>
+    
+    <Version>$(XunitVersion)</Version>
+    <InformationalVersion>$(XunitVersion)</InformationalVersion>
+    <AssemblyVersion>$(XunitAssemblyVersion)</AssemblyVersion>
+    <FileVersion>$(XunitAssemblyFileVersion)</FileVersion>
+
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Elastic.Managed.Ephemeral\Elastic.Managed.Ephemeral.csproj" />
-    <!--<PackageReference Include="Proc" Version="0.1.3" />-->
     <PackageReference Include="xunit" Version="2.3.1" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Configuration" />
   </ItemGroup>
 </Project>
