--- a/src/Elastic.Managed/Elastic.Managed.csproj
+++ b/src/Elastic.Managed/Elastic.Managed.csproj
@@ -12,6 +12,14 @@
     <AssemblyVersion>$(ManagedAssemblyVersion)</AssemblyVersion>
     <FileVersion>$(ManagedAssemblyFileVersion)</FileVersion>
     
+    <PackageId>Elastic.Managed</PackageId>
+    <Authors>Elastic and contributors</Authors>
+    <Description>
+      Provides an observable ElasticsearchNode abstraction that can be used to wrap an elasticsearch process. 
+      Also ships with an cluster abstraction that can start one or more ElasticsearchNode's
+    </Description>
+    <PackageTags>elastic,elasticsearch,cluster,observable,rx</PackageTags>
+    
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Proc" Version="0.1.3" />
