--- a/src/Elastic.Xunit/Elastic.Xunit.csproj
+++ b/src/Elastic.Xunit/Elastic.Xunit.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\build\Common.targets" />
   <PropertyGroup>
-    <TargetFramework>netstandard1.3</TargetFramework>
+    <TargetFrameworks>netstandard1.3;net46</TargetFrameworks>
     <RootNamespace>Elastic.Xunit</RootNamespace>
     <IsPackable>True</IsPackable>
     <Version>$(XunitVersion)</Version>
