--- a/src/Examples/Elastic.Xunit.ExampleComplex/Elastic.Xunit.ExampleComplex.csproj
+++ b/src/Examples/Elastic.Xunit.ExampleComplex/Elastic.Xunit.ExampleComplex.csproj
@@ -9,9 +9,11 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Elastic.Managed.Ephemeral\Elastic.Managed.Ephemeral.csproj" />
     <ProjectReference Include="..\..\Elastic.Xunit\Elastic.Xunit.csproj" />
-    <PackageReference Include="FluentAssertions" Version="5.1.2" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
+    
+    <PackageReference Include="NEST" Version="6.0.1" />
+    <PackageReference Include="FluentAssertions" Version="5.1.2" />
   </ItemGroup>
 </Project>
