--- a/src/Elastic.Managed.Ephemeral/Elastic.Managed.Ephemeral.csproj
+++ b/src/Elastic.Managed.Ephemeral/Elastic.Managed.Ephemeral.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\build\Common.targets" />
   <PropertyGroup>
-    <TargetFramework>netstandard1.3</TargetFramework>
+    <TargetFrameworks>netstandard1.3;net46</TargetFrameworks>
     <AssemblyName>Elastic.Managed.Ephemeral</AssemblyName>
     <RootNamespace>Elastic.Managed.Ephemeral</RootNamespace>
     <LangVersion>7.1</LangVersion>
@@ -17,5 +17,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Elastic.Managed\Elastic.Managed.csproj" />
+    <PackageReference Include="System.Net.Http" Version="4.3.1" Condition="'$(TargetFramework)'=='net46'"/>
   </ItemGroup>
 </Project>
