--- a/src/Examples/Elastic.Xunit.ExampleMinimal/Elastic.Xunit.ExampleMinimal.csproj
+++ b/src/Examples/Elastic.Xunit.ExampleMinimal/Elastic.Xunit.ExampleMinimal.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFrameworks>netcoreapp2.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-beta1-build3642" />
