--- a/src/Examples/ScratchPad/ScratchPad.csproj
+++ b/src/Examples/ScratchPad/ScratchPad.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp1.1</TargetFramework>
@@ -7,7 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Elastic.Managed.Ephemeral\Elastic.Managed.Ephemeral.csproj" />
     <!--<ProjectReference Include="..\..\..\..\proc\src\Proc\Proc.csproj" />-->
-    <PackageReference Include="Proc" Version="0.1.4" />
+    <PackageReference Include="Proc" Version="0.1.6" />
     <PackageReference Include="NEST" Version="6.0.1" />
   </ItemGroup>
 </Project>
