--- a/src/Nest.TypescriptExporter/tsconfig.json
+++ b/src/Nest.TypescriptExporter/tsconfig.json
@@ -2,6 +2,6 @@
     "compilerOptions": {
       "experimentalDecorators": true,
       "skipLibCheck": true,
-      "noLib": true
+      "noLib": false
     }
   }
