--- a/src/Nest.TypescriptExporter/tsconfig.json
+++ b/src/Nest.TypescriptExporter/tsconfig.json
@@ -1,7 +1,19 @@
 {
-    "compilerOptions": {
-      "experimentalDecorators": true,
-      "skipLibCheck": true,
-      "noLib": false
-    }
-  }
+  "compileOnSave" : false,
+  "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs",
+    "isolatedModules": false,
+    "jsx": "react",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "declaration": false,
+    "noImplicitAny": false,
+    "removeComments": true,
+    "noLib": false,
+    "preserveConstEnums": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "noEmit" : true
+  },
+  "exclude": [ "node_modules", "build", "src", "typings" ]
+}
