--- a/src/Nest.TypescriptExporter/Nest.TypescriptExporter.csproj
+++ b/src/Nest.TypescriptExporter/Nest.TypescriptExporter.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.8.2" />
+    <PackageReference Include="ShellProgressBar" Version="4.0.0" />
     <!--<PackageReference Include="TypeLite" Version="1.1.0" />-->
     <Reference Include="TypeLite.dll" />
     <PackageReference Include="NEST" Version="6.0.1" />
