--- a/src/Elastic.Managed/Elastic.Managed.csproj
+++ b/src/Elastic.Managed/Elastic.Managed.csproj
@@ -19,7 +19,8 @@
     <PackageTags>elastic,elasticsearch,cluster,observable,rx</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Proc" Version="0.2.1" />
+    <PackageReference Include="Proc" Version="0.3.3" />
+    <!--<ProjectReference Include="..\..\..\..\proc\src\Proc\Proc.csproj" />-->
     <PackageReference Include="SemanticVersioning" Version="0.8.0" />
   </ItemGroup>
 </Project>
