--- a/src/Differ/Differ.csproj
+++ b/src/Differ/Differ.csproj
@@ -3,6 +3,13 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net462</TargetFramework>
     <LangVersion>7.1</LangVersion>
+
+    <LangVersion>latest</LangVersion>
+    <Version>$(DifferVersion)</Version>
+    <InformationalVersion>$(DifferVersion)</InformationalVersion>
+    <AssemblyVersion>$(DifferAssemblyVersion)</AssemblyVersion>
+    <FileVersion>$(DifferAssemblyFileVersion)</FileVersion>
+
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Mono.Options" Version="5.3.0.1" />
