--- a/src/Elastic.Managed.Ephemeral/Elastic.Managed.Ephemeral.csproj
+++ b/src/Elastic.Managed.Ephemeral/Elastic.Managed.Ephemeral.csproj
@@ -17,6 +17,12 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Elastic.Managed\Elastic.Managed.csproj" />
+    <PackageReference Include="SharpZipLib.NETStandard" Version="1.0.7" />
     <PackageReference Include="System.Net.Http" Version="4.3.1" Condition="'$(TargetFramework)'=='net46'" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Runtime.InteropServices.RuntimeInformation, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <HintPath>..\..\..\..\..\.nuget\packages\system.runtime.interopservices.runtimeinformation\4.3.0\ref\netstandard1.1\System.Runtime.InteropServices.RuntimeInformation.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
