--- a/src/Elastic.Managed/Elastic.Managed.csproj
+++ b/src/Elastic.Managed/Elastic.Managed.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\build\Common.targets" />
   <PropertyGroup>
     <AssemblyName>Elastic.Managed</AssemblyName>
-    <TargetFramework>netstandard1.3</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
     <RootNamespace>Elastic.Managed</RootNamespace>
     <LangVersion>7.1</LangVersion>
     <Version>$(ManagedVersion)</Version>
@@ -19,8 +19,10 @@
     <PackageTags>elastic,elasticsearch,cluster,observable,rx</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Proc" Version="0.3.7" />
+    <PackageReference Include="Proc" Version="0.5.0" />
     <!--<ProjectReference Include="..\..\..\..\proc\src\Proc\Proc.csproj" />-->
     <PackageReference Include="SemanticVersioning" Version="0.8.0" />
+    <PackageReference Condition="'$(TargetFramework)' == 'net46'" Include="System.Net.Http" Version="4.3.1" />
+    <PackageReference Condition="'$(TargetFramework)' == 'net46'" Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
   </ItemGroup>
 </Project>
