--- a/src/Elastic.Managed/Elastic.Managed.csproj
+++ b/src/Elastic.Managed/Elastic.Managed.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\build\Common.targets" />
   <PropertyGroup>
     <AssemblyName>Elastic.Managed</AssemblyName>
-    <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <RootNamespace>Elastic.Managed</RootNamespace>
     <LangVersion>7.1</LangVersion>
     <Version>$(ManagedVersion)</Version>
@@ -22,7 +22,8 @@
     <PackageReference Include="Proc" Version="0.6.1" />
     <!--<ProjectReference Include="..\..\..\..\proc\src\Proc\Proc.csproj" />-->
     <PackageReference Include="SemanticVersioning" Version="0.8.0" />
-    <PackageReference Condition="'$(TargetFramework)' == 'net46'" Include="System.Net.Http" Version="4.3.1" />
-    <PackageReference Condition="'$(TargetFramework)' == 'net46'" Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Condition="'$(TargetFramework)' == 'net461'" Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
+    <PackageReference Include="System.Text.Json" Version="4.6.0-preview6.19303.8" />
   </ItemGroup>
 </Project>
