--- a/src/Elastic.Stack.Artifacts/Elastic.Stack.Artifacts.csproj
+++ b/src/Elastic.Stack.Artifacts/Elastic.Stack.Artifacts.csproj
@@ -2,6 +2,15 @@
 
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+        
+        <Version>$(StackVersion)</Version>
+        <InformationalVersion>$(StackVersion)</InformationalVersion>
+        <AssemblyVersion>$(StackAssemblyVersion)</AssemblyVersion>
+        <FileVersion>$(StackAssemblyFileVersion)</FileVersion>
+        <PackageId>Elastic.Stack.Artifacts</PackageId>
+        <Authors>Elastic and contributors</Authors>
+        <Description>Provides a set of classes to resolve the location of Elastic stack products in various stages: released, snapshot and build candidates</Description>
+        <PackageTags>elastic,elasticsearch,stack,versioning,artifacts</PackageTags>
     </PropertyGroup>
     
     <ItemGroup>
