--- a/src/Elastic.Stack.Artifacts/Elastic.Stack.Artifacts.csproj
+++ b/src/Elastic.Stack.Artifacts/Elastic.Stack.Artifacts.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+    <Import Project="..\..\build\Common.targets" />
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
         
