--- a/src/Elastic.Stack.Artifacts/Elastic.Stack.Artifacts.csproj
+++ b/src/Elastic.Stack.Artifacts/Elastic.Stack.Artifacts.csproj
@@ -16,8 +16,7 @@
     
     <ItemGroup>
         <PackageReference Include="SemanticVersioning" Version="0.8.0" />
-        <PackageReference Include="System.Text.Json" Version="4.6.0-preview6.19303.8" />
-        <PackageReference Condition="'$(TargetFramework)' == 'net461'" Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
+        <PackageReference Include="System.Text.Json" Version="4.6.0" />
     </ItemGroup>
 
 </Project>
