--- a/src/Examples/Elastic.Managed.Example/Elastic.Managed.Example.csproj
+++ b/src/Examples/Elastic.Managed.Example/Elastic.Managed.Example.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <IsPackable>False</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Elastic.Managed\Elastic.Managed.csproj"/>
