--- a/src/Examples/Elastic.Xunit.ExampleMinimal/Elastic.Xunit.ExampleMinimal.csproj
+++ b/src/Examples/Elastic.Xunit.ExampleMinimal/Elastic.Xunit.ExampleMinimal.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.0;net461</TargetFrameworks>
+    <IsPackable>False</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-beta1-build3642" />
