--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,19 +1,22 @@
 version: 1.0.{build} 
 image: Visual Studio 2017
-
-pull_requests:  
-  do_not_increment_build_number: true
-branches:  
-  only:
-  - master
-build_script: 
-  - cmd: build.bat canary
 test: off
 environment:
-  DOTNET_CLI_TELEMETRY_OPTOUT: true
-  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
-artifacts:  
-- path: .\build\output\_packages\*.nupkg
-  name: NuGet
+    DOTNET_CLI_TELEMETRY_OPTOUT: true
+    DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+install:
+    - cmd: choco install dotnetcore-sdk --version 3.0.100
+build_script:
+    - cmd: build.bat canary
+
+pull_requests:
+    do_not_increment_build_number: true
 nuget:
-  disable_publish_on_pr: true
+    disable_publish_on_pr: true  
+for:
+    - branches:
+          only:
+              - master
+      artifacts:
+          - path: .\build\output\_packages\*.nupkg
+            name: NuGet
