--- a/src/Examples/Elastic.Managed.Example/Elastic.Managed.Example.csproj
+++ b/src/Examples/Elastic.Managed.Example/Elastic.Managed.Example.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <IsPackable>False</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Elastic.Managed\Elastic.Managed.csproj"/>
