--- a/src/Elastic.Elasticsearch.Xunit/Elastic.Elasticsearch.Xunit.csproj
+++ b/src/Elastic.Elasticsearch.Xunit/Elastic.Elasticsearch.Xunit.csproj
@@ -7,7 +7,7 @@
     <InformationalVersion>$(XunitVersion)</InformationalVersion>
     <AssemblyVersion>$(XunitAssemblyVersion)</AssemblyVersion>
     <FileVersion>$(XunitAssemblyFileVersion)</FileVersion>
-    <PackageId>Elastic.Xunit</PackageId>
+    <PackageId>Elastic.Elasticsearch.Xunit</PackageId>
     <Authors>Elastic and contributors</Authors>
     <Description>Provides an Xunit test framework allowing you to run integration tests against local ephemeral Elasticsearch clusters</Description>
     <PackageTags>elastic,elasticsearch,xunit,cluster,integration,test,ephemeral</PackageTags>
