--- a/src/Elastic.Elasticsearch.Ephemeral/Elastic.Elasticsearch.Ephemeral.csproj
+++ b/src/Elastic.Elasticsearch.Ephemeral/Elastic.Elasticsearch.Ephemeral.csproj
@@ -8,7 +8,7 @@
     <InformationalVersion>$(EphemeralVersion)</InformationalVersion>
     <AssemblyVersion>$(EphemeralAssemblyVersion)</AssemblyVersion>
     <FileVersion>$(EphemeralAssemblyFileVersion)</FileVersion>
-    <PackageId>Elastic.Managed.Ephemeral</PackageId>
+    <PackageId>Elastic.Elasticsearch.Ephemeral</PackageId>
     <Authors>Elastic and contributors</Authors>
     <Description>Provides an EphemeralCluster implementation that can download/bootstrap/run a throwaway customizable Elasticsearch cluster</Description>
     <PackageTags>elastic,elasticsearch,cluster,ephemeral</PackageTags>
