--- a/src/Nest.TypescriptExporter/Nest.TypescriptExporter.csproj
+++ b/src/Nest.TypescriptExporter/Nest.TypescriptExporter.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <IsPackable>False</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.8.2"/>
