--- a/examples/Elastic.Managed.Example/Elastic.Managed.Example.csproj
+++ b/examples/Elastic.Managed.Example/Elastic.Managed.Example.csproj
@@ -7,6 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Elastic.Elasticsearch.Managed\Elastic.Elasticsearch.Managed.csproj" />
+    <ProjectReference Include="..\..\src\Elastic.Elasticsearch.Managed\Elastic.Elasticsearch.Managed.csproj" />
   </ItemGroup>
 </Project>
