--- a/src/Nest.TypescriptExporter/Nest.TypescriptExporter.csproj
+++ b/src/Nest.TypescriptExporter/Nest.TypescriptExporter.csproj
@@ -3,13 +3,14 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <IsPackable>False</IsPackable>
+    <SignAssembly>False</SignAssembly>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.8.2"/>
-    <PackageReference Include="ShellProgressBar" Version="4.0.0"/>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.8.2" />
+    <PackageReference Include="ShellProgressBar" Version="5.0.0" />
     <!--<PackageReference Include="TypeLite" Version="1.1.0" />-->
-    <Reference Include="TypeLite.dll"/>
-    <PackageReference Include="NEST" Version="7.4.0"/>
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2"/>
+    <Reference Include="TypeLite.dll" />
+    <PackageReference Include="NEST" Version="7.4.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 </Project>
