--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,12 +41,15 @@ jobs:
     - run: ./build.sh generateapichanges -s true
       name: "Inspect public API changes"
 
-    # https://github.com/dotnet/docs/issues/7146 needs ** pattern to pick up multiple
     - name: publish to github package repository
       if: github.event_name == 'push' && startswith(github.ref, 'refs/heads')
       shell: bash
+      # https://github.com/dotnet/docs/issues/7146 needs ** pattern to pick up multiple, sadly does not work
       run:  |
-         until dotnet nuget push **/output/*.nupkg -k ${{secrets.GITHUB_TOKEN}} --skip-duplicate --no-symbols true; do echo "Retrying"; sleep 1; done;
+         until dotnet nuget push build/output/Elastic.Elasticsearch.Managed.*.nupkg -k ${{secrets.GITHUB_TOKEN}} --skip-duplicate --no-symbols true; do echo "Retrying"; sleep 1; done;
+         until dotnet nuget push build/output/Elastic.Elasticsearch.Ephemeral.*.nupkg -k ${{secrets.GITHUB_TOKEN}} --skip-duplicate --no-symbols true; do echo "Retrying"; sleep 1; done;
+         until dotnet nuget push build/output/Elastic.Elasticsearch.Xunit.*.nupkg -k ${{secrets.GITHUB_TOKEN}} --skip-duplicate --no-symbols true; do echo "Retrying"; sleep 1; done;
+         until dotnet nuget push build/output/Elastic.Stack.ArtifactsApi.*.nupkg -k ${{secrets.GITHUB_TOKEN}} --skip-duplicate --no-symbols true; do echo "Retrying"; sleep 1; done;
 
     - run: ./build.sh generatereleasenotes -s true
       name: Generate release notes for tag
