update build ouput

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,5 +18,5 @@ for:
           only:
               - master
       artifacts:
-          - path: .\build\output\_packages\*.nupkg
+          - path: .\build\output\*.nupkg
             name: NuGet
