--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,11 +41,16 @@ jobs:
     - run: ./build.sh generateapichanges -s true
       name: "Inspect public API changes"
 
-    - name: publish to github package repository
+    - name: publish canary packages github package repository
       if: github.event_name == 'push' && startswith(github.ref, 'refs/heads')
       shell: bash
       run:  |
           until dotnet nuget push 'build/output/*.nupkg' -k ${{secrets.GITHUB_TOKEN}} --skip-duplicate --no-symbols true; do echo "Retrying"; sleep 1; done;
+
+    # Github packages requires authentication, this is likely going away in the future so for now we publish to feedz.io
+    - run: dotnet nuget push 'build/output/*.nupkg' -k ${{secrets.FEEDZ_IO_API_KEY}} -s https://f.feedz.io/elastic/all/nuget/index.json --skip-duplicate --no-symbols true
+      name: publish canary packages to feedz.io
+      if: github.event_name == 'push' && startswith(github.ref, 'refs/heads')
 
     - run: ./build.sh generatereleasenotes -s true
       name: Generate release notes for tag
@@ -53,7 +58,7 @@ jobs:
     - run: ./build.sh createreleaseongithub -s true --token ${{secrets.GITHUB_TOKEN}}
       if: github.event_name == 'push' && startswith(github.ref, 'refs/tags')
       name: Create or update release for tag on github
-      
+          
     # - run: dotnet nuget push 'build/output/*.nupkg' -k ${{secrets.NUGET_ORG_API_KEY}} -s https://api.nuget.org/v3/index.json --skip-duplicate --no-symbols true
     #  name: release to nuget.org
     #  if: github.event_name == 'push' && startswith(github.ref, 'refs/tags')
