--- a/src/Elastic.Elasticsearch.Xunit/Elastic.Elasticsearch.Xunit.csproj
+++ b/src/Elastic.Elasticsearch.Xunit/Elastic.Elasticsearch.Xunit.csproj
@@ -2,10 +2,12 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1;net462</TargetFrameworks>
     <IsPackable>True</IsPackable>
+    <IsTestProject>False</IsTestProject>
     <Description>Provides an Xunit test framework allowing you to run integration tests against local ephemeral Elasticsearch clusters</Description>
     <PackageTags>elastic,elasticsearch,xunit,cluster,integration,test,ephemeral</PackageTags>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Nullean.Xunit.Partitions" Version="0.5.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
   <ItemGroup>
