--- a/src/Elastic.Stack.ArtifactsApi/Elastic.Stack.ArtifactsApi.csproj
+++ b/src/Elastic.Stack.ArtifactsApi/Elastic.Stack.ArtifactsApi.csproj
@@ -7,7 +7,12 @@
     
     <ItemGroup>
         <PackageReference Include="SemanticVersioning" Version="1.3.0" />
-        <PackageReference Include="System.Text.Json" Version="4.6.0" />
+        <PackageReference Include="System.Text.Json" Version="8.0.5" />
+    </ItemGroup>
+    
+    <ItemGroup Condition="'$(TargetFramework)' == 'net462'">
+      <Reference Include="System.Net.Http" />
+      <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
     </ItemGroup>
 
 </Project>
