--- a/src/Elastic.Stack.ArtifactsApi/Elastic.Stack.ArtifactsApi.csproj
+++ b/src/Elastic.Stack.ArtifactsApi/Elastic.Stack.ArtifactsApi.csproj
@@ -1,15 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.0;net462</TargetFrameworks>
+        <TargetFrameworks>netstandard2.0;net462;net8.0</TargetFrameworks>
         <Description>Provides a set of classes to resolve the location of Elastic stack products in various stages: released, snapshot and build candidates</Description>
         <PackageTags>elastic,elasticsearch,stack,versioning,artifacts</PackageTags>
     </PropertyGroup>
     
     <ItemGroup>
         <PackageReference Include="SemanticVersioning" Version="1.3.0" />
-        <PackageReference Include="System.Text.Json" Version="8.0.5" />
     </ItemGroup>
-    
+    <ItemGroup Condition="'$(TargetFramework)' != 'net8.0'">
+      <PackageReference Include="System.Text.Json" Version="8.0.5" />
+    </ItemGroup>
+
     <ItemGroup Condition="'$(TargetFramework)' == 'net462'">
       <Reference Include="System.Net.Http" />
       <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
